@@ -12,7 +12,12 @@ Enhancements:
  * Issue #155: AbstractedFS "root" and "cwd" are no longer read-only properties
    but can be set via setattr().
 
-Major API changes since 0.6.0
+Bugfixes:
+
+ * Issue 156: data connection must be closed before sending 226/426 reply.
+   This was against RFC-959 and was causing problems with older FTP clients.
+
+Major API changes since 0.6.0:
 
  * AbstractedFS root and cwd properties can now be set via setattr().
 
